Simplify Nominatim reverse lookup helpers (#156)